<resources>
    <string name="app_name">Teacher</string>
    <string name="skip">Skip</string>
    <string name="next">NEXT</string>
    <string name="full_name">full name</string>
    <string name="phone">phone number</string>
    <string name="complete">complete</string>
    <string name="check_the_code">CHECK</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="sign_up">SIGN UP</string>
    <string name="password">PASSWORD</string>
    <string name="_6_widget_code">6 widget code</string>
    <string name="login_into">login into \nyour account</string>
    <string name="login">login</string>
    <string name="dont_have_account">Don\'t Have Account Yet ?</string>
    <string name="creat_one">Creat One</string>
    <string name="create_acc">Create Your Account</string>
    <string name="logo">logo</string>
</resources>
