<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <RelativeLayout

        android:id="@+id/rigstrationfragmentcontainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<ImageView
    android:layout_centerHorizontal="true"
    android:id="@+id/logo"
    android:layout_marginTop="@dimen/_50"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/logo_dark"/>


        <TextView
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="@dimen/_24s"
            android:id="@+id/text_into"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="@dimen/_50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_into"
            android:layout_below="@+id/logo"
            android:gravity="center"/>


        <LinearLayout
            android:layout_marginTop="@dimen/_50"
            android:id="@+id/entry_layout"
            android:orientation="vertical"
            android:layout_below="@+id/text_into"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:inputType="phone"
                android:id="@+id/phone"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_marginStart="@dimen/dimen_24"
                android:layout_marginEnd="@dimen/dimen_24"
                android:layout_marginTop="@dimen/_12"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/phone"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="@dimen/_12"
                android:drawableLeft="@drawable/ic_phone" />

            <EditText
                android:inputType="textPassword"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_marginStart="@dimen/dimen_24"
                android:layout_marginEnd="@dimen/dimen_24"
                android:layout_marginTop="@dimen/_12"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/password"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="@dimen/_12"
                android:drawableLeft="@drawable/ic_lock" />


        </LinearLayout>
<com.google.android.material.button.MaterialButton
    android:layout_width="match_parent"
    android:layout_height="@dimen/_60"
    android:id="@+id/login"
    android:fontFamily="sans-serif-smallcaps"
    android:backgroundTint="@color/colorAccent"
    android:text="@string/login"
    android:layout_below="@id/entry_layout"
    android:layout_marginTop="@dimen/_20"
    android:layout_marginEnd="@dimen/_20"
    android:layout_marginStart="@dimen/_20"/>



        <LinearLayout
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <TextView
                android:textColor="@color/colorPrimaryDark"
                android:gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dont_have_account"/>

            <TextView
                android:id="@+id/create_account"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:layout_marginEnd="2sp"
                android:layout_marginStart="2dp"
                android:textSize="@dimen/_18s"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/colorAccent"
                android:text="@string/creat_one"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2sp" />

        </LinearLayout>


    </RelativeLayout>


</layout>
